--- a/VitiligoTracker/Views/Shared/_Layout.cshtml
+++ b/VitiligoTracker/Views/Shared/_Layout.cshtml
@@ -1,3 +1,6 @@
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
@@ -26,11 +29,36 @@
                                 <i class="bi bi-people-fill me-1"></i>患者列表
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Patients" asp-action="Create">
-                                <i class="bi bi-person-plus-fill me-1"></i>新增患者
-                            </a>
-                        </li>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-area="" asp-controller="Patients" asp-action="Create">
+                                    <i class="bi bi-person-plus-fill me-1"></i>新增患者
+                                </a>
+                            </li>
+                        }
+                    </ul>
+                    <ul class="navbar-nav">
+                        @if (SignInManager.IsSignedIn(User))
+                        {
+                            <li class="nav-item">
+                                <span class="nav-link text-white">你好 @User.Identity?.Name!</span>
+                            </li>
+                            <li class="nav-item">
+                                <form class="form-inline" asp-controller="Account" asp-action="Logout" method="post">
+                                    <button type="submit" class="nav-link btn btn-link text-white" style="cursor:pointer;">注销</button>
+                                </form>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-controller="Account" asp-action="Register">注册</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" asp-controller="Account" asp-action="Login">登录</a>
+                            </li>
+                        }
                     </ul>
                 </div>
             </div>
