--- a/VitiligoTracker/Views/_ViewImports.cshtml
+++ b/VitiligoTracker/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using VitiligoTracker
 @using VitiligoTracker.Models
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
