--- a/VitiligoTracker/Views/Patients/Index.cshtml
+++ b/VitiligoTracker/Views/Patients/Index.cshtml
@@ -18,8 +18,8 @@
 </div>
 
 <div class="card border-0 shadow-sm">
-    <div class="card-body p-0">
-        <div class="table-responsive">
+    <div class="card-body p-0 d-flex flex-column">
+        <div class="table-responsive" style="flex: 1; overflow-y: auto;">
             <table class="table table-hover align-middle mb-0">
                 <thead class="bg-light">
                     <tr>
