--- a/VitiligoTracker/Views/Patients/Details.cshtml
+++ b/VitiligoTracker/Views/Patients/Details.cshtml
@@ -142,7 +142,7 @@
       <div class="card-body p-0 d-flex flex-column">
         @if (Model.TreatmentRecords != null && Model.TreatmentRecords.Any())
         {
-          <div class="table-responsive" style="flex: 1; overflow-y: auto;">
+          <div class="table-responsive" style="max-height: 455px; overflow-y: auto;">
             <table class="table table-hover align-middle mb-0">
               <thead class="bg-light">
                 <tr>
